// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test getWallet positive 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 90,
          }
        }
      />
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onScrollToIndexFailed={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    scrollToOverflowEnabled={true}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    testID="testFlatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 90,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
    testID="testGetWallet"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/send.png",
        }
      }
      style={
        Object {
          "height": 25,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`Test view with empty txs 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 90,
          }
        }
      />
    }
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onScrollToIndexFailed={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    scrollToOverflowEnabled={true}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    testID="testFlatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 90,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
    testID="testGetWallet"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/send.png",
        }
      }
      style={
        Object {
          "height": 25,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;

exports[`Test view with txs (ChatType == Address) 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTScrollView
    ListHeaderComponent={
      <View
        style={
          Object {
            "marginBottom": 90,
          }
        }
      />
    }
    data={
      Array [
        Object {
          "id": "1000",
          "isTx": false,
          "timestamp": 1622716416000,
          "value": Object {
            "id": "1000",
            "timestamp": 1622716416000,
            "value": "Hello",
          },
        },
        Object {
          "id": "10005",
          "isTx": false,
          "timestamp": 1622716416000,
          "value": Object {
            "id": "10005",
            "timestamp": 1622716416000,
            "value": "Hello! I am Staking Bot. You can invest to staking with my help. Do you want?",
          },
        },
        Object {
          "id": "10005",
          "isTx": false,
          "timestamp": 1622716416000,
          "value": Object {
            "id": "10005",
            "timestamp": 1622716416000,
            "value": "😀 ☝ Hello How are you? Baby?  How are you? Baby?  How are you? Baby? How are you? Baby?  How are you? Baby?  How are you? Baby? How are you? Baby? adsa",
          },
        },
        Object {
          "id": "1",
          "isTx": true,
          "timestamp": 1581454800000,
          "value": Object {
            "address": "address#1",
            "currency": 0,
            "fee": 1,
            "hash": "hash#1",
            "id": "1",
            "planckFee": "10000000",
            "planckValue": "1000000",
            "status": 2,
            "timestamp": 1581454800000,
            "txType": 1,
            "usdFee": 12,
            "usdValue": 12,
            "userId": null,
            "value": 12,
          },
        },
        Object {
          "id": "2",
          "isTx": true,
          "timestamp": 1581454800000,
          "value": Object {
            "address": "address#2",
            "currency": 0,
            "fee": 2,
            "hash": "hash#2",
            "id": "2",
            "planckFee": "10000000",
            "planckValue": "1000000",
            "status": 1,
            "timestamp": 1581454800000,
            "txType": 2,
            "usdFee": 13,
            "usdValue": 13,
            "userId": null,
            "value": 13,
          },
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onScrollToIndexFailed={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    scrollToOverflowEnabled={true}
    stickyHeaderIndices={Array []}
    style={
      Array [
        Object {
          "scaleY": -1,
        },
        Object {
          "width": "100%",
        },
      ]
    }
    testID="testFlatList"
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
      >
        <View
          style={
            Object {
              "marginBottom": 90,
            }
          }
        />
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "scaleY": -1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "marginBottom": 5,
                "marginTop": 5,
                "paddingLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#9CE5FF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "maxWidth": "80%",
                  "padding": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginRight": 8,
                    "maxWidth": "70%",
                  }
                }
              >
                Hello
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 7,
                    "textAlign": "center",
                  }
                }
              >
                13:33
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingTop": 5,
              }
            }
          >
            <View
              style={
                Object {
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Send
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Receive
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "scaleY": -1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "marginBottom": 5,
                "marginTop": 5,
                "paddingLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#9CE5FF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "maxWidth": "80%",
                  "padding": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginRight": 8,
                    "maxWidth": "70%",
                  }
                }
              >
                Hello! I am Staking Bot. You can invest to staking with my help. Do you want?
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 7,
                    "textAlign": "center",
                  }
                }
              >
                13:33
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingTop": 5,
              }
            }
          >
            <View
              style={
                Object {
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Send
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Receive
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          style={
            Object {
              "scaleY": -1,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "flex-start",
                "marginBottom": 5,
                "marginTop": 5,
                "paddingLeft": 20,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#9CE5FF",
                  "borderRadius": 10,
                  "flexDirection": "row",
                  "maxWidth": "80%",
                  "padding": 10,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginRight": 8,
                    "maxWidth": "70%",
                  }
                }
              >
                😀 ☝ Hello How are you? Baby?  How are you? Baby?  How are you? Baby? How are you? Baby?  How are you? Baby?  How are you? Baby? How are you? Baby? adsa
              </Text>
              <Text
                style={
                  Object {
                    "alignSelf": "flex-end",
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 12,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginTop": 7,
                    "textAlign": "center",
                  }
                }
              >
                13:33
              </Text>
            </View>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "paddingBottom": 10,
                "paddingLeft": 20,
                "paddingTop": 5,
              }
            }
          >
            <View
              style={
                Object {
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Send
                </Text>
              </View>
            </View>
            <View
              style={
                Object {
                  "paddingLeft": 10,
                  "width": "20%",
                }
              }
            >
              <View
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#BFEEFF",
                    "borderRadius": 10,
                    "justifyContent": "center",
                    "marginBottom": 5,
                    "marginRight": 10,
                    "marginTop": 5,
                    "opacity": 1,
                    "paddingBottom": 10,
                    "paddingLeft": 20,
                    "paddingRight": 20,
                    "paddingTop": 10,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 15,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    }
                  }
                >
                  Receive
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "scaleY": -1,
            }
          }
          testID="testNavigate"
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#DADADA",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "marginTop": 5,
                  "minWidth": "48%",
                  "padding": 10,
                },
                Object {
                  "alignSelf": "flex-end",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginBottom": 5,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontSize": 20,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰸇
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 13,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 3,
                  }
                }
              >
                you_sent_title
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 20,
                    "borderWidth": 0.8,
                    "height": 40,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 30,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "marginLeft": 8,
                    },
                    Object {
                      "color": "#888888",
                    },
                  ]
                }
              >
                $12
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 55,
                  },
                ]
              }
            >
              12
               
              DOT
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "flex-start",
                      "marginLeft": 3,
                    },
                  ]
                }
              >
                12/02/20 00:00
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#EA4335",
                        "fontSize": 20,
                      },
                      Object {
                        "alignSelf": "flex-end",
                        "marginLeft": 3,
                      },
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰅖
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
              "scaleY": -1,
            }
          }
          testID="testNavigate"
        >
          <View
            style={
              Array [
                Object {
                  "borderColor": "#DADADA",
                  "borderRadius": 10,
                  "borderWidth": 1,
                  "justifyContent": "center",
                  "marginBottom": 5,
                  "marginLeft": 20,
                  "marginRight": 20,
                  "marginTop": 5,
                  "minWidth": "48%",
                  "padding": 10,
                },
                Object {
                  "alignSelf": "flex-start",
                },
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginBottom": 5,
                  },
                ]
              }
            >
              <Text
                allowFontScaling={false}
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontSize": 20,
                    },
                    undefined,
                    Object {
                      "fontFamily": "Material Design Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {},
                  ]
                }
              >
                󰮏
              </Text>
              <Text
                style={
                  Object {
                    "color": "#888888",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 13,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 3,
                  }
                }
              >
                you_received_title
              </Text>
            </View>
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Image
                source={
                  Object {
                    "testUri": "../../../assets/img/dot.png",
                  }
                }
                style={
                  Object {
                    "borderColor": "black",
                    "borderRadius": 20,
                    "borderWidth": 0.8,
                    "height": 40,
                    "overflow": "hidden",
                    "width": 40,
                  }
                }
              />
              <Text
                style={
                  Array [
                    Object {
                      "color": "black",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 30,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                      "marginLeft": 8,
                    },
                    Object {
                      "color": "#67D44D",
                    },
                  ]
                }
              >
                $13
              </Text>
            </View>
            <Text
              style={
                Array [
                  Object {
                    "color": "black",
                    "fontFamily": "Roboto-Regular",
                    "fontSize": 15,
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                    "marginLeft": 55,
                  },
                ]
              }
            >
              13
               
              DOT
            </Text>
            <View
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flexDirection": "row",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#888888",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 12,
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "flex-start",
                      "marginLeft": 3,
                    },
                  ]
                }
              >
                12/02/20 00:00
              </Text>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  style={
                    Array [
                      Object {
                        "color": "#67D44D",
                        "fontSize": 20,
                      },
                      Object {
                        "alignSelf": "flex-end",
                        "marginLeft": 3,
                      },
                      Object {
                        "fontFamily": "Material Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "height": 0,
          }
        }
      />
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#2AB2E2",
        "borderRadius": 50,
        "bottom": 10,
        "height": 60,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 10,
        "width": 60,
      }
    }
    testID="testGetWallet"
  >
    <Image
      source={
        Object {
          "testUri": "../../../assets/img/send.png",
        }
      }
      style={
        Object {
          "height": 25,
          "width": 16,
        }
      }
    />
  </View>
</View>
`;
